# gregsheet

./: .gitignore  Cargo.toml  README.md  index.html  migration.md  summary.md
assets/shaders/: grid.wgsl
src/: cell.rs  evaluator.rs  formula.rs  gpu_cell.rs  grid_state.rs  lib.rs  main.rs  svg_renderer.rs
src/demo/: mod.rs  tests.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/public/: simple-worker.js
web/src/: App.tsx  test-worker.ts  worker.ts
