[package]
name = "gregsheet"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3" }
console_error_panic_hook = "0.1.7"
env_logger = "0.11.8"
evalexpr = "13.1.0"
bytemuck = { version = "1.14", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
