[package]
name = "gregsheet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.17.3" }
console_error_panic_hook = "0.1.7"
env_logger = "0.11.8"
evalexpr = "13.1.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Rich HTML cell rendering (SVG-based approach)
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"
crossbeam-channel = "0.5"
seahash = "4.1"

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "OffscreenCanvas",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true

[features]
default = []
dev = ["bevy/dynamic_linking"]
